Upgrade to Java 17, Micronaut 4.1.2 and Oracle GraalVM 17.0.8 (#72)
* Upgrade to Java 17, Micronaut 4.1.2 and Oracle GraalVM 17.0.8

* Address code duplication

* Address code dup on apply/diff

* Address code dup on apply/diff

* Fix code smells

* Dup + code smells

* Change field scope